dashboard: bug fix with table overflow, html escaping in table,better control on field visibility

--- a/dashboard/app.css
+++ b/dashboard/app.css
@@ -132,3 +132,7 @@ body {
 .help-block {
     color: #aaa;
 }
+
+.table-wrapper {
+    overflow: auto;
+}
